--- a/linkedoffer2/prediction.html
+++ b/linkedoffer2/prediction.html
@@ -87,7 +87,7 @@
 	<div id="box"><div id="main" style="height:400px"></div></div>	
 	<h4>恭喜您！您的月薪超过了XX%的同行</h4>
 	<button type="submit" id="btn" onclick="test()">一键开启互联网招聘</button>
-	<script src="echarts.js"></script>
+	<script src="echarts-all.js"></script>
 	<script type="text/javascript">
 		var myChart = echarts.init(document.getElementById('main')); 
 
