--- a/linkedoffer2/qanda.html
+++ b/linkedoffer2/qanda.html
@@ -40,7 +40,7 @@
 			line-height: 20px;
 		}
 		#footi{
-			position: fixed;
+			position: relative;
 			bottom: 10px;
 			right: 10px;
 			margin-top: 150px;
