--- a/linkedoffer2/startpredict.html
+++ b/linkedoffer2/startpredict.html
@@ -24,16 +24,16 @@
 		}
 		button{
 			margin-top: 100px;
-			border-radius: 60px;
-			width: 120px;
-			height: 120px;
+			border-radius: 50px;
+			width: 100px;
+			height: 100px;
 		}
 	</style>
 </head>
 <body>
 	<h1>你想知道毕业五年内&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;你能拿多少月薪吗？</h1>
 	<button type="submit" id="btn" onclick="test()">开始预测</button>
-	<a href="fillup.html" >跳过预测</a>
+	<a href="getkeys.html" >跳过预测</a>
 </body>
 <script>
 	function test()
