--- a/linkedoffer2/submitpieces.html
+++ b/linkedoffer2/submitpieces.html
@@ -17,6 +17,13 @@
 		#myform{
 			margin-top: 20px;
 		}
+
+		p{
+			margin: 0px;
+			text-align: center;
+			font-size: 14px;
+			font-weight: lighter;
+		}
 		input {
 			width: 75%;
 			height: 20px;
@@ -29,7 +36,7 @@
 			font-size: 14px;
 			line-height: 20px;
 			overflow:hidden;
-			background-color: #fff;
+			background-color: #D6D6D6;
 			color: #3e3a39;
 			float: right;
 		}
@@ -86,8 +93,142 @@
 			display:none;
 			margin-top:166px;
 		}
+		#light{
+			width:10px;
+			height:10px;
+			border-radius: 5px;
+			background:#2D2D2D;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			position:relative;
+			margin-right: auto;
+			margin-left: auto;
+			text-align: center;
+		}
+		#warning{
+			margin-top: 10px;
+			margin-bottom: 10px;
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
+		}
+		#warningc{
+			margin-top: 10px;
+			margin-bottom: 10px;
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
+		}
+		.breathshut{
+			animation:myfirst 4s ease-in-out 0s alternate;
+			/* Firefox: */
+			-moz-animation:myfirst 4s ease-in-out 0s alternate;
+			/* Safari and Chrome: */
+			-webkit-animation:myfirst 4s ease-in-out 0s alternate;
+			/* Opera: */
+			-o-animation:myfirst 4s ease-in-out 0s alternate;
+		}
+		.breath
+		{			
+			animation:myfirst 4s ease-in-out infinite alternate;
+			/* Firefox: */
+			-moz-animation:myfirst 4s ease-in-out infinite alternate;
+			/* Safari and Chrome: */
+			-webkit-animation:myfirst 4s ease-in-out infinite alternate;
+			/* Opera: */
+			-o-animation:myfirst 4s ease-in-out infinite alternate;
+		}
+		@keyframes myfirst
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:white; }
+			100% {background:#2D2D2D; }
+		}
+		@-moz-keyframes myfirst /* Firefox */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:white; }
+			100% {background:#2D2D2D; }
+		}
+		@-webkit-keyframes myfirst /* Safari and Chrome */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:white; }
+			100% {background:#2D2D2D; }
+		}
+		@-o-keyframes myfirst /* Opera */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:white; }
+			100% {background:#2D2D2D; }
+		}
+		.breath2
+		{			
+			animation:breathw 4s ease-in-out infinite alternate;
+			/* Firefox: */
+			-moz-animation:breathw 4s ease-in-out infinite alternate;
+			/* Safari and Chrome: */
+			-webkit-animation:breathw 4s ease-in-out infinite alternate;
+			/* Opera: */
+			-o-animation:breathw 4s ease-in-out infinite alternate;
+		}
+		@keyframes breathw
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:red; }
+			100% {background:#2D2D2D; }
+		}
+		@-moz-keyframes breathw /* Firefox */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:red; }
+			100% {background:#2D2D2D; }
+		}
+		@-webkit-keyframes breathw /* Safari and Chrome */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:red; }
+			100% {background:#2D2D2D; }
+		}
+		@-o-keyframes breathw /* Opera */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:red; }
+			100% {background:#2D2D2D; }
+		}		
+		.breath1
+		{			
+			animation:breathr 4s ease-in-out infinite alternate;
+			/* Firefox: */
+			-moz-animation:breathr 4s ease-in-out infinite alternate;
+			/* Safari and Chrome: */
+			-webkit-animation:breathr 4s ease-in-out infinite alternate;
+			/* Opera: */
+			-o-animation:breathr 4s ease-in-out infinite alternate;
+		}
+		@keyframes breathr
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:green; }
+			100% {background:#2D2D2D; }
+		}
+		@-moz-keyframes breathr /* Firefox */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:green; }
+			100% {background:#2D2D2D; }
+		}
+		@-webkit-keyframes breathr /* Safari and Chrome */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:green; }
+			100% {background:#2D2D2D; }
+		}
+		@-o-keyframes breathr /* Opera */
+		{
+			0%   {background:#2D2D2D; }
+			50%  {background:green; }
+			100% {background:#2D2D2D; }
+		}
+
 		#footi{
-			/*position: fixed;*/
+			position: relative;
 			bottom: 10px;
 			right: 10px;
 			margin-top: 120px;
@@ -101,16 +242,16 @@
 
 	<form  id="myform" onsubmit="" action="" enctype="" method="post">
 		<div class="inputt">姓名
-			<li onblur="check(this)" name="name" ></li>
+			<input onblur="check(this)" type="text" name="name" id="name" placeholder="姓名为必填">
 		</div>
 		<div class="inputt">电话
-			<li onblur="check(this)" name="phone" ></li>
+			<input onblur="check(this)" type="text" name="phone" placeholder="电话为必填">
 		</div>
 		<div class="inputt">邮箱
-			<li onblur="check(this)" name="email" ></li>
+			<input onblur="check(this)" type="text" name="email" placeholder="邮箱为必填">
 		</div>
 		<div class="inputt">毕业年份
-			<li onblur="check(this)" name="year"></li>
+			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),必填">
 		</div>
 		<div id="pieces1" class="inputt">作品网盘
 			<textarea name="" id="" cols="30" rows="1" placeholder="作品网盘地址"></textarea>
@@ -138,7 +279,10 @@
 			<text id="XMLID_121_" transform="matrix(1 0 0 1 11.6328 7.8319)" class="st1 st2 st3">增加作品</text>
 		</svg>
 	</form>
-	<button type="submit" id="btn" onclick="test()">提交</button>
+	<div id="light" class="breath"></div>
+
+	<div id="warning"></div>
+	<button type="submit" id="btn" onfocus="blankc();blankc2();" ontouchstart="blankc();blankc2();" onclick="test()">下一步</button>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html"><img src="question.png"></a>
 	</div>
@@ -152,6 +296,126 @@
 			document.getElementById("pieces3").style.display="block";
 		};
 		newform.style.display="block";
+	}document.getElementById("name").focus();
+
+	document.onkeypress=function(){if (event.keyCode==13)blankc();}
+	function blankc () {
+		var inputs = document.getElementsByTagName("input");
+		for (var i=0; i<inputs.length; i++) {
+			if (inputs[i].value==null||inputs[i].value==""){
+				document.getElementById("btn").disabled=true;
+				warning (inputs[i].placeholder ,inputs[i]);
+				inputs[i].focus();
+				break;
+			}
+			else{
+				// document.getElementById("btn").disabled=false;
+			}
+		}
+	}
+	function blankc2 () {
+		var textareas = document.getElementsByTagName("textarea");
+		for (var i=0; i<2; i++) {
+			if (textareas[i].value==null||textareas[i].value==""){
+				document.getElementById("btn").disabled=true;
+				warning (textareas[i].placeholder ,textareas[i]);
+				textareas[i].focus();
+				break;
+			}
+			else{
+				document.getElementById("btn").disabled=false;
+			}
+		}
+	}
+
+
+	function check (obj) {
+		validate(obj);
+		switch (obj.name)
+		{
+			// case "phone":
+			// checkMobile(obj);
+			// break;
+			// case "email":
+			// checkEmail(obj);
+			// break;
+			// case "year":
+			// checkYear(obj);
+			// break;
+		}
+	}
+	function validate(obj)
+	{
+		if (obj.value==null||obj.value=="")
+		{
+			document.getElementById("btn").disabled=true;
+			warning (obj.placeholder,obj);
+		}
+		else {
+			document.getElementById("btn").disabled=false;
+			flicker(1);
+			clearwar();
+		}
+	}
+	function checkMobile(obj){   
+		var regu =/^1[0-9]{1}[0-9]{9}$/; 
+		var re = new RegExp(regu); 
+		if (re.test(obj.value)) {
+			flicker(1);
+			clearwar();
+		}else{ 
+			warning ("请输入正确的手机号",obj);
+			obj.value="";
+		} 
+	} 
+
+	function checkEmail(obj){  
+		var regu = /^[-_A-Za-z0-9]+@([_A-Za-z0-9]+\.)+[A-Za-z0-9]{2,3}$/; 
+		var re = new RegExp(regu); 
+		if (re.test(obj.value)){
+			flicker(1)
+			clearwar();
+		}else{
+			warning ("请输入正确的邮箱",obj);
+			obj.value="";
+		} 
+	}
+	function checkYear(obj) {
+		var regu =/^201[0-6]{1,1}$/; 
+		var re = new RegExp(regu); 
+		if (re.test(obj.value)) { 
+			flicker(1)
+			clearwar();
+		}else{ 
+			warning ("请输入正确的年份，2010~2016",obj);
+			obj.value="";
+		} 
+	}
+	function warning (text, obj) {
+		// obj.focus();
+		flicker(2);	
+		document.getElementById("btn").disabled=true;
+		document.getElementById("warning").innerHTML="";
+		var para=document.createElement("p");
+		para.id="warningc"
+		var node=document.createTextNode(text+"");
+		para.appendChild(node);
+		var element=document.getElementById("warning");
+		element.appendChild(para);	
+	}
+	function clearwar () {
+		document.getElementById("btn").disabled=false;
+		document.getElementById("warning").innerHTML="";
+	}
+	function flicker (n) 
+	{
+		document.getElementById('light').setAttribute("class", "breathshut"); 
+		if (n==1) {
+			document.getElementById('light').setAttribute("class", "breath1"); 
+		};
+		if (n==2) {
+			document.getElementById('light').setAttribute("class", "breath2"); 
+		};
 	}
 	function test()
 	{
