--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>申请成功</title>
+	<title>Linkedoffer</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8"> 
 	<meta http-equiv="Content-Language" content="zh-cn">
 	<meta name="Description" content="Linkedoffer，连接你身边的HR致力于向青年提供互联网职业机会，基于连接HR邮箱的社交化招聘。">
