--- a/linkedoffer2/fillup2.html
+++ b/linkedoffer2/fillup2.html
@@ -12,6 +12,7 @@
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+	<script src="data.js"></script>
 	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
 	<style type="text/css">
 		body{
@@ -190,20 +191,27 @@
 	
 
 	<form  id="myform" onsubmit="" action="" enctype="" method="post">
-		<div class="inputt">应聘岗位
-			<select name="cars" placeholder="应聘岗位,必选">
-				<option value="volvo">Volvo</option>
-				<option value="saab">Saab</option>
-				<option value="fiat">Fiat</option>
-				<option value="audi">Audi</option>
+		<div class="inputt">岗位类别
+			<select id="GWleibie">
+				<option value="1">技术类</option>
+				<option value="2">产品类</option>
+				<option value="3">设计类</option>
+				<option value="4">市场、商务、销售、运营类</option>
 			</select>
 		</div>
-		<div class="inputt">期望工作城市
-			<select name="cars" placeholder="应聘岗位,必选">
-				<option value="volvo">Volvo</option>
-				<option value="saab">Saab</option>
-				<option value="fiat">Fiat</option>
-				<option value="audi">Audi</option>
+		<div class="inputt">目标岗位
+			<select onfocus="changeopt(this);" id="mubiaoGW">
+			</select>
+		</div>
+		<div class="inputt">城市类别
+			<select id="CSleibie">
+				<option value="1">北上广深杭</option>
+				<option value="2">其它一线</option>
+				<option value="3">一线外的省会城市</option>
+			</select>
+		</div>
+		<div class="inputt">目标城市
+			<select onfocus="changeopt2(this);" id="mubiaoCS">
 			</select>
 		</div>
 		<!-- <h4>请填写基本信息</h4> -->
@@ -219,6 +227,54 @@
 	console.log(document.getElementsByTagName('meta')["Copyright"].content);
 	// document.getElementById("name").focus();
 
+	function changeopt (obj) {
+		switch (document.getElementById("GWleibie").value)
+		{
+			case "1":
+			fillmubiao (jishu,obj);
+			var basic=jishulei;
+			break;
+			case "2":
+			fillmubiao (chanpin,obj);
+			var basic=chanpinlei;
+			break;
+			case "3":
+			fillmubiao (sheji,obj);
+			var basic=shejilei;
+			break;
+			case "4":
+			fillmubiao (yunying,obj);
+			var basic=yunyinglei;
+			break;
+		}
+	}
+	function changeopt2 (obj) {
+		switch (document.getElementById("CSleibie").value)
+		{
+			case "1":
+			fillmubiao (yixian,obj);
+			break;
+			case "2":
+			fillmubiao (yixian2,obj);
+			var addi_CS=gongzuochengshi[5];
+			break;
+			case "3":
+			fillmubiao (shenghui,obj);
+			var addi_CS=gongzuochengshi[6];
+			break;
+		}
+	}
+	function fillmubiao (obj,pos) {
+		pos.innerHTML="";
+		for (var i = obj.length - 1; i >= 0; i--) {
+			var para=document.createElement("option");
+			para.value=i;
+			var node=document.createTextNode(obj[i]);
+			para.appendChild(node);
+			var element=pos;
+			element.appendChild(para);
+		};
+	}
 	function test()
 	{
 		document.getElementById("myform").submit(); 
