--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>申请成功</title>
+	<title>获取密钥</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8"> 
 	<meta http-equiv="Content-Language" content="zh-cn">
 	<meta name="Description" content="Linkedoffer，连接你身边的HR致力于向青年提供互联网职业机会，基于连接HR邮箱的社交化招聘。">
@@ -47,7 +47,7 @@
 <body>
 	<h4>您毕业之后五年内的月薪和所选岗位的平均薪酬：</h4>
 	<h4>致力于向青年提供互联网实习机会基于连接HR邮箱的社交化招聘一次申请，十个HR关注，直接领offer！</h4>
-	<button type="submit" onclick="test()">获取密匙</button>
+	<button type="submit" onclick="test()">获取密钥</button>
 	<h4>已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
 	<div id="footi" style="float:right;padding-top:0px;">注：我们将会有选择性的发放五百个名额，每天零点更新。
 		<a href="qanda.html"><img src="question.png"></a>
