--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -45,7 +45,7 @@
 	</style>
 </head>
 <body>
-	<h4>您毕业之后五年内的月薪和所选岗位的平均薪酬：</h4>
+	<h4>Linkedoffer连接你身边的HR：</h4>
 	<h4>致力于向青年提供互联网实习机会基于连接HR邮箱的社交化招聘一次申请，十个HR关注，直接领offer！</h4>
 	<button type="submit" onclick="test()">获取密钥</button>
 	<h4>已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
