--- a/linkedoffer2/settarget.html
+++ b/linkedoffer2/settarget.html
@@ -245,7 +245,7 @@
 			</select>
 		</div>
 		<div class="inputt">目标岗位
-			<select onfocus="changeopt(this);" ontouchstart="changeopt2(this);" id="mubiaoGW">
+			<select onfocus="changeopt(this);" ontouchstart="changeopt(this);" id="mubiaoGW">
 			</select>
 		</div>
 		<div class="inputt">城市类别
