--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -25,10 +25,16 @@
 			font-size: 16px;
 		}
 		h4{
-			margin-top: 50px;
+			margin-top: 20px;
+			text-align: center;
+		}
+		h4:first-child{
+			color: #EC8515;
+			margin-top: 50px;	
 		}
 		button{
-			margin-top: 50px;
+			margin-top: 80px;
+			margin-bottom: 80px;
 		}
 		a{
 			text-decoration: none;
@@ -40,15 +46,18 @@
 			right: 10px;
 			margin-top: 150px;
 			font-size: 14px;
-			line-height: 30px;			
+			line-height: 30px;
+			color:#808080;	
 		}
 	</style>
 </head>
 <body>
-	<h4>Linkedoffer连接你身边的HR：</h4>
-	<h4>致力于向青年提供互联网实习机会基于连接HR邮箱的社交化招聘一次申请，十个HR关注，直接领offer！</h4>
+	<h4>LINKEDOFFER——连接你身边的HR：</h4>
+	<h4>致力于向青年提供互联网实习机会</h4>
+	<h4>基于连接HR邮箱的社交化招聘</h4>
+	<h4>一次申请，十个HR关注，直接领offer！</h4>
 	<button type="submit" onclick="test()">获取密钥</button>
-	<h4>已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
+	<h4 style="color:#808080;">已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
 	<div id="footi" style="float:right;padding-top:0px;">注：我们将会有选择性的发放五百个名额，每天零点更新。
 		<a href="qanda.html"><img src="question.png"></a>
 	</div>
