--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -52,7 +52,7 @@
 	</style>
 </head>
 <body>
-	<h4>LINKEDOFFER——连接你身边的HR：</h4>
+	<h4>LINKEDOFFER——连接你身边的HR</h4>
 	<h4>致力于向青年提供互联网实习机会</h4>
 	<h4>基于连接HR邮箱的社交化招聘</h4>
 	<h4>一次申请，十个HR关注，直接领offer！</h4>
