--- a/linkedoffer2/settarget.html
+++ b/linkedoffer2/settarget.html
@@ -386,6 +386,7 @@
 		var salary=basic_GW;
 		for (var i = salary.length - 1; i >= 0; i--) {
 			salary[i]=basic_GW[i]+addi_CS[i]+addi_QY[i]+addi_XL[i]+addi_JL[i];
+			salary[i]=salary[i].toFixed(2);
 		};		
 		graph (salary[0],salary[1],salary[2],salary[3],salary[4],salary[5]);
 		document.getElementById("btn").disabled=true;
