--- a/linkedoffer2/settarget.html
+++ b/linkedoffer2/settarget.html
@@ -300,7 +300,7 @@
 	</div>
 	<button type="submit" id="btn2" style="width: 180px;" onclick="test ()">一键开启互联网招聘</button>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script>
