--- a/linkedoffer2/fillup2.html
+++ b/linkedoffer2/fillup2.html
@@ -219,7 +219,7 @@
 	</form>
 	<button type="submit" id="btn" onclick="test()">提交</button>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script>
