--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -36,7 +36,9 @@
 			margin-top: 80px;
 			margin-bottom: 80px;
 		}
-		a{
+		h4 a{
+			background-color: transparent;
+			color: #EC8515;
 			text-decoration: none;
 			color: #EC8515;
 		}
@@ -59,7 +61,7 @@
 	<button type="submit" onclick="test()">获取密钥</button>
 	<h4 style="color:#808080;">已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
 	<div id="footi" style="float:right;padding-top:0px;">注：我们将会有选择性的发放五百个名额，每天零点更新。
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script type="text/javascript">
