--- a/linkedoffer2/fillup.html
+++ b/linkedoffer2/fillup.html
@@ -207,7 +207,7 @@
 	</form>
 	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">下一步</button>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script>
@@ -234,15 +234,15 @@ console.log(document.getElementsByTagName('meta')["Description"].content);
 		validate(obj);
 		switch (obj.name)
 		{
-			case "phone":
-			checkMobile(obj);
-			break;
-			case "email":
-			checkEmail(obj);
-			break;
-			case "year":
-			checkYear(obj);
-			break;
+			// case "phone":
+			// checkMobile(obj);
+			// break;
+			// case "email":
+			// checkEmail(obj);
+			// break;
+			// case "year":
+			// checkYear(obj);
+			// break;
 		}
 	}
 	function validate(obj)
