--- a/linkedoffer2/startpredict.html
+++ b/linkedoffer2/startpredict.html
@@ -18,6 +18,10 @@
 			background-repeat: no-repeat;
 		}
 		a{
+			background-color: transparent;
+			color: #EC8515;
+		}
+		a{
 			display: block;
 			text-align: center;
 			margin-top: 100px;
