--- a/linkedoffer2/success.html
+++ b/linkedoffer2/success.html
@@ -36,7 +36,7 @@
 	<h4>&nbsp;&nbsp;申请成功！</h4>
 	<h5>请打开邮箱查收登录密钥<br />立即参与互联网校园招聘</h5>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 </html>
