--- a/linkedoffer2/success2.html
+++ b/linkedoffer2/success2.html
@@ -45,7 +45,7 @@
 	<h5>请您保持关注邮箱信息！我们会<br />在两个工作日内与您取得联系。</h5>
 	<h5>一旦通过审核，我们将为您提供<br />专属的招聘服务。</h5>
 	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
-		<a href="qanda.html"><img src="question.png"></a>
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 </html>
