--- a/linkedoffer2/qanda.html
+++ b/linkedoffer2/qanda.html
@@ -71,7 +71,7 @@
 	<li>Linkedoffer提供的是身边的互联网职业机会，主要服务城市：北京、上海、广州、深圳、杭州、武汉、长沙。</li>
 	<ul>Q：我想寻找本地的互联网工作，Linkedoffer会开通更多服务城市么？</ul>
 	<li>Linkedoffer将您与身边的互联网公司的HR邮箱进行连接，即便在非主要服务城市，我们也可为您提供实习/职业机会。</li>
-	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<!-- <img src="question.png"> -->
 	</div>
 </body>
