--- a/linkedoffer2/settarget.html
+++ b/linkedoffer2/settarget.html
@@ -299,7 +299,7 @@
 		<div id="main" style="height:400px"></div>
 	</div>
 	<button type="submit" id="btn2" style="width: 180px;" onclick="test ()">一键开启互联网招聘</button>
-	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
@@ -405,12 +405,6 @@
 		var option = {
 			tooltip : {
 				trigger: 'axis'
-			},
-			toolbox: {
-				show : true,
-				feature : {
-					saveAsImage : {show: true}
-				}
 			},
 			legend: {
 				data:['预测工资','该岗位平均工资']
