--- a/linkedoffer2/success.html
+++ b/linkedoffer2/success.html
@@ -30,12 +30,20 @@
 			margin-top: 100px;
 			font-size: 18px;
 		}
+		#footi{
+			position: fixed;
+			bottom: 10px;
+			right: 10px;
+			margin-top: 150px;
+			font-size: 14px;
+			color:#a1a1a1;			
+		}
 	</style>
 </head>
 <body>
 	<h4>&nbsp;&nbsp;申请成功！</h4>
 	<h5>请打开邮箱查收登录密钥<br />立即参与互联网校园招聘</h5>
-	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
