--- a/linkedoffer2/success2.html
+++ b/linkedoffer2/success2.html
@@ -36,7 +36,7 @@
 			right: 10px;
 			margin-top: 150px;
 			font-size: 14px;
-			line-height: 30px;			
+			color:#a1a1a1;			
 		}
 	</style>
 </head>
@@ -44,7 +44,7 @@
 	<h4>&nbsp;&nbsp;提交成功！</h4>
 	<h5>请您保持关注邮箱信息！我们会<br />在两个工作日内与您取得联系。</h5>
 	<h5>一旦通过审核，我们将为您提供<br />专属的招聘服务。</h5>
-	<div id="footi" style="float:right;padding-top:0px;">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
