--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -42,15 +42,6 @@
 			text-decoration: none;
 			color: #EC8515;
 		}
-		#footi{
-			position: fixed;
-			bottom: 10px;
-			right: 10px;
-			margin-top: 150px;
-			font-size: 14px;
-			line-height: 30px;
-			color:#808080;	
-		}
 	</style>
 </head>
 <body>
@@ -60,7 +51,7 @@
 	<h4>一次申请，十个HR关注，直接领offer！</h4>
 	<button type="submit" onclick="test()">获取密钥</button>
 	<h4 style="color:#808080;">已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
-	<div id="footi" style="float:right;padding-top:0px;">注：我们将会有选择性的发放五百个名额，每天零点更新。
+	<div id="footi">注：我们将会有选择性的发放五百个名额，每天零点更新。
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
