--- a/linkedoffer2/fillup2.html
+++ b/linkedoffer2/fillup2.html
@@ -29,9 +29,9 @@
 			font-size: 14px;
 			font-weight: lighter;
 		}
-		input,select {
-			width: 75%;
-			/*height: 20px;*/
+		select {
+			width: 77%;
+			height: 40px;
 			padding-top: 10px;
 			padding-bottom: 10px;
 			padding-left: 5px;
@@ -45,11 +45,10 @@
 			color: #3e3a39;
 			float: right;
 		}
-		input,select:focus{
+		select:focus{
 			outline-style: none;
 		}
 		select{
-			height: 40px;
 		}
 		#light{
 			width:10px;
@@ -219,7 +218,7 @@
 			</select>
 		</div>
 		<div class="inputt">目标城市
-			<select onfocus="changeopt(this);" ontouchstart="changeopt(this);" id="mubiaoCS">
+			<select onfocus="changeopt2(this);" ontouchstart="changeopt2(this);" id="mubiaoCS">
 			</select>
 		</div>
 		<!-- <h4>请填写基本信息</h4> -->
