--- a/linkedoffer2/startpredict.html
+++ b/linkedoffer2/startpredict.html
@@ -18,16 +18,16 @@
 			background-repeat: no-repeat;
 		}
 		a{
-			background-color: transparent;
+			text-decoration: none;
 			color: #EC8515;
 		}
 		a{
 			display: block;
 			text-align: center;
-			margin-top: 100px;
+			margin-top: 60px;
 		}
 		button{
-			margin-top: 100px;
+			margin-top: 60px;
 			border-radius: 50px;
 			width: 100px;
 			height: 100px;
@@ -39,6 +39,9 @@
 	<h1>你想知道毕业五年内&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br/><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;你能拿多少月薪吗？</h1>
 	<button type="submit" id="btn" onclick="test()">开始预测</button>
 	<a href="getkeys.html" >跳过预测</a>
+	<div id="footi">
+		<a style="margin-top: 0px;" href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
+	</div>
 </body>
 <script>
 	function test()
