--- a/linkedoffer2/fillup.html
+++ b/linkedoffer2/fillup.html
@@ -71,9 +71,8 @@
 			position: fixed;
 			bottom: 10px;
 			right: 10px;
-			margin-top: 150px;
 			font-size: 14px;
-			color:#a1a1a1;			
+			color:#a1a1a1;
 		}
 		.breathshut{
 			animation:myfirst 4s ease-in-out 0s alternate;
@@ -214,7 +213,7 @@
 		<div id="warning"></div>
 	</form>
 	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">下一步</button>
-	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi">
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
