--- a/linkedoffer2/submitpieces.html
+++ b/linkedoffer2/submitpieces.html
@@ -226,6 +226,7 @@
 			50%  {background:green; }
 			100% {background:#2D2D2D; }
 		}
+
 		#footi{
 			position: relative;
 			bottom: 10px;
@@ -282,8 +283,8 @@
 
 	<div id="warning"></div>
 	<button type="submit" id="btn" onfocus="blankc();" ontouchstart="blankc();" onclick="test()">下一步</button>
-	<div id="footi">
-		<a style="display:block;width:30px;height:30px;" href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script>
