--- a/linkedoffer2/success.html
+++ b/linkedoffer2/success.html
@@ -33,9 +33,10 @@
 		#footi{
 			position: fixed;
 			bottom: 10px;
-			left: 8px;
+			right: 10px;
+			margin-top: 150px;
 			font-size: 14px;
-			color:#a1a1a1;
+			color:#a1a1a1;			
 		}
 	</style>
 </head>
