--- a/linkedoffer2/fillup2.html
+++ b/linkedoffer2/fillup2.html
@@ -76,8 +76,9 @@
 			position: fixed;
 			bottom: 10px;
 			right: 10px;
+			margin-top: 150px;
 			font-size: 14px;
-			color:#a1a1a1;
+			color:#a1a1a1;			
 		}
 		.breathshut{
 			animation:myfirst 4s ease-in-out 0s alternate;
@@ -224,7 +225,7 @@
 		<div id="light" class="breath"></div>
 	</form>
 	<button type="submit" id="btn" onclick="test()">提交</button>
-	<div id="footi">
+	<div id="footi">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
