--- a/linkedoffer2/submitpieces.html
+++ b/linkedoffer2/submitpieces.html
@@ -253,16 +253,16 @@
 		<div class="inputt">毕业年份
 			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),必填">
 		</div>
-		<div id="pieces1" class="inputt">作品网盘
-			<input placeholder="作品网盘地址">
+		<div id="pieces1" class="inputt">作品链接
+			<input placeholder="作品链接地址">
 			<textarea name="" id="" cols="30" rows="6" placeholder="相关描述及您所负责的部分（例：linkedoffer互联网校园垂直招聘平台：php程序员，负责产品后端开发工作）"></textarea>
 		</div>
-		<div id="pieces2" class="inputt">作品网盘
-			<input placeholder="作品网盘地址">
+		<div id="pieces2" class="inputt">作品链接
+			<input placeholder="作品链接地址">
 			<textarea name="" id="" cols="30" rows="6" placeholder="相关描述及您所负责的部分（例：linkedoffer互联网校园垂直招聘平台：php程序员，负责产品后端开发工作）"></textarea>
 		</div>
-		<div id="pieces3" class="inputt">作品网盘
-			<input placeholder="作品网盘地址">
+		<div id="pieces3" class="inputt">作品链接
+			<input placeholder="作品链接地址">
 			<textarea name="" id="" cols="30" rows="6" placeholder="相关描述及您所负责的部分（例：linkedoffer互联网校园垂直招聘平台：php程序员，负责产品后端开发工作）"></textarea>
 		</div>
 		<svg onclick="addnewform()" version="1.1" baseProfile="basic" width="120" height="20" x="0px" y="0px" viewBox="10 0 35 10"	xml:space="preserve">
@@ -420,7 +420,7 @@
 	function test()
 	{
 		document.getElementById("myform").submit(); 
-		window.location.href = 'success.html';
+		window.location.href = 'success2.html';
 	}
 </script>
 </html>
