--- a/linkedoffer2/success2.html
+++ b/linkedoffer2/success2.html
@@ -29,14 +29,14 @@
 		h4{
 			margin-top: 100px;
 			font-size: 18px;
+			color="#EC8515"
 		}
 		#footi{
 			position: fixed;
 			bottom: 10px;
-			right: 10px;
-			margin-top: 150px;
+			left: 8px;
 			font-size: 14px;
-			color:#a1a1a1;			
+			color:#a1a1a1;
 		}
 	</style>
 </head>
