--- a/linkedoffer2/settarget.html
+++ b/linkedoffer2/settarget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-	<title>填写个性化信息</title>
+	<title>你想知道自己五年后拿多少薪水么？点击开始测试！</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<meta http-equiv="Content-Language" content="zh-cn">
 	<meta name="Description" content="Linkedoffer，连接你身边的HR致力于向青年提供互联网职业机会，基于连接HR邮箱的社交化招聘。">
