--- a/linkedoffer2/success.html
+++ b/linkedoffer2/success.html
@@ -46,13 +46,13 @@
 
 	<h4>&nbsp;&nbsp;申请成功！</h4>
 	<h5>请打开邮箱查收登录密钥<br />立即参与互联网校园招聘</h5>
-	<div id="footi" onclick="showarrow()">点击此处进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi" onclick="showarrow()">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
-<script type="text/javascript">	
+<script type="text/javascript">
+		document.title="一键开启互联网招聘—极速链接你身边的HR";	
 	function showarrow () {
-		document.title="一键开启互联网招聘—极速链接你身边的HR";
 		document.getElementById("arrow").style.display="block";
 	}
 </script>
