--- a/linkedoffer2/success2.html
+++ b/linkedoffer2/success2.html
@@ -46,13 +46,13 @@
 	<h4>&nbsp;&nbsp;提交成功！</h4>
 	<h5>请您保持关注邮箱信息！我们会<br />在两个工作日内与您取得联系。</h5>
 	<h5>一旦通过审核，我们将为您提供<br />专属的招聘服务。</h5>
-	<div id="footi" onclick="showarrow()">点击此处进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
+	<div id="footi" onclick="showarrow()">点击右上角进行<font color="#EC8515">分享</font>，一起拿offer一起飞~
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
 </body>
 <script type="text/javascript">	
-	function showarrow () {
 		document.title="一键开启互联网招聘—极速链接你身边的HR";
+	function showarrow () {
 		document.getElementById("arrow").style.display="block";
 	}
 </script>
